adding notes to intro paragraph on single-trophic / horizontal systems

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -68,7 +68,7 @@
 % online Methods separate
 
     \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be empirically observable when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend beyond ecological systems.}
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be empirically observable when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, with potential applications of this framework extending beyond ecological systems.}
 
 
 
@@ -87,7 +87,11 @@
     In many biological systems, interactions between various components affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many components are involved, such complex systems can be represented as networks where the components are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
 
     \paragraph{}
-    Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
+    %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
+    Network theory has been widely applied to investigate the structure of food webs and other types of trophic interaction networks .. [specify this is for species?]
+
+    There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions, but non-trophic interactions such as those occurring between plants are largely neglected \parencite{Ellison2019}. This is unfortunate, as recent work indicates that non-trophic interactions and plant diversity alter food web structure, stability and diversity-functioning relationships \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}. Plant-plant interaction networks belong to a class of networks which can be described as horizontal: all nodes exist within the same level of organisation. The study of horizontal interaction networks provides it's own challenges: ....
+    Integrating plant and trophic networks remains a key challenge in improving our understanding of community dynamics and persistence \parencite{Godoy2018c}.
 
     \paragraph{} 
     In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities have rarely been found to match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
@@ -301,7 +305,7 @@
 \section{Conclusion}
 
     \paragraph{} 
-    There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions, but non-trophic interactions such as those occurring between plants are largely neglected \parencite{Ellison2019}. This is unfortunate, as recent work indicates that non-trophic interactions and plant diversity alter food web structure, stability and diversity-functioning relationships \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}. Integrating plant and trophic networks remains a key challenge in improving our understanding of community dynamics and persistence \parencite{Godoy2018c}. By providing a method whith which to estimate interactions in horizontal systems, we hope to help empiricists who would like to ...
+     By providing a method whith which to estimate interactions in horizontal systems, we hope to help empiricists who would like to ...
 
 
     
